<resources>
    <string name="app_name">ChatLocaly</string>
    <string name="application_key">f7795dc359c99991ff22f1623a2875e2</string>
    <string name="map_key">AIzaSyBYtEiHsfZaP6CSQ-8oMsOpDAbOcJlO3gY</string>
    <string name="nav_item_contact_us">Trash</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dialog_attachment_photo">Photo Library</string>
    <string name="dialog_attachment_take_photo">Take Photo</string>
    <string name="dialog_attachment_header">Edit Image</string>
    <string name="txt_setting_header">Settings</string>
    <string name="menu_action_all_down">All down</string>
    <string name="menu_action_up_down">Up down</string>
    <string name="menu_action_up_down_stack">Up down stack</string>
    <string name="nav_item_rate_us">Rate Our App</string>
    <string name="share_using">Share Using ... </string>
    <string name="str_exit">Exit</string>
    <string name="str_yes">YES</string>
    <string name="str_no">No</string>
    <string name="str_exitmessage">Are you sure you want to exit?</string>
    <string name="str_updatemessage">
        <b>Update Notification</b> \n\n
      A new version of EventApp Mobile App is available.Upgrade now?</string>
    <string name="cancel">cancel</string>
    <string name="str_ok">Ok</string>
    <string name="update">Upgrade</string>
    <string name="remide">Later</string>
    <string name="str_loading">Loading ...</string>
    <string name="str_inbox">Inbox</string>
    <string name="str_contacts">Contacts</string>
    <string name="str_calendar">Calendar</string>
    <string name="str_quickie">Task</string>
    <string name="str_settings">Settings</string>
    <string-array name="nav_drawer2_labels">
        <item>@string/nav_item_people</item>
        <item>@string/nav_item_group</item>
    </string-array>
    <string-array name="nav_drawer_labels_contacts">
        <item>Bills </item>
        <item>Settings</item>
        S
        <item>Feedback</item>
        <item>Rate Us </item>
        <item>About Us</item>

    </string-array>
    <string name="str_login_error">error</string>
    <string name="str_favorite">Add favorite quickey
    </string>
    <string name="str_search">Search by Subject</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_field_required">Required Field</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Please confirm your country code and enter your phone number</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">Next</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="code">Code</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="str_select_country">Select Country</string>
    <string name="back">Back</string>
    <string name="resendotp">  Resend  </string>
    <string name="action_otp_message">Please enter the one time password that has been sent to your mobile number</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_item_people">People</string>
    <string name="nav_item_group">Group</string>
    <string name="new_group">New Group</string>
    <string name="upload_image">Attach Image</string>
    <string name="gallary">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select">Select</string>
    <string name="upload_image_Dialog">Upload Image</string>
    <string name="dialog_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>
    <string name="str_allcontacts">All Contacts</string>
    <string name="str_done_contacts">Done</string>
    <string name="str_fetch">Image Fetched Successfully</string>
    <string name="str_cancelled">Cancelled</string>
    <string name="str_attachment">Attachment</string>
    <string name="terms_condition_autolink"><a href="http://www.jasapp.com/terms-condition.html">Terms and Conditions</a></string>
    <string name="privacy_policy"><a href="http://www.jasapp.com/privacy-policy.html">Privacy Policy</a></string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="what_">what is to be done ?</string>
    <string name="due_date">Due date</string>
    <string name="str_add_contacts">Add contacts</string>
    <string name="overdue">Overdue</string>
    <string name="ths_week">Upcoming weeks</string>
    <string name="str_enter_country">Search by country </string>
    <string name="str_logout">Are you sure you want to logout?</string>
    <string name="str_logout_title">Logout</string>
    <string name="str_delete">Are you sure you want to delete?</string>
    <string name="str_delete_title">delete</string>
    <string name="app_tagline">We let you take your business to new heights</string>
    <string name="str_getstarted">Get Started</string>
    <string name="str_joinnow">Join Now</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_enterpromo">Enter Promo Code</string>
    <string name="str_enterphone">Your Phone Number</string>
    <string name="str_enteradminPhone">Enter Admin Mobile</string>
    <string name="str_enterotp">Enter OTP</string>
    <string name="str_enterPassword">Enter Password</string>
    <string name="str_allready_member">ALREADY A MEMBER?</string>
    <string name="str_not_member">NOT A MEMBER?</string>
    <string name="str_promoLine">Enter JOINNOW to get free premium membership for 3 months</string>
    <string name="str_congoLine">Congratulations , you get free premium membership for 1 year </string>
    <string name="str_loginAs">Log In As</string>
    <string name="str_admin">ADMIN</string>
    <string name="str_subadmin">SUB ADMIN</string>
    <string name="str_worker">WORKER</string>
    <string name="str_takePhoto">Take Photo</string>
    <string name="str_chooseGallery">CHOOSE FROM GALLERY</string>
    <string name="str_nxt">NEXT</string>
    <string name="str_done">DONE</string>
    <string name="str_privacyPolicy"><a href="https://www.chatlocaly.com/legal">Privacy Policy</a></string>
    <string name="str_privacyPolicy2">Privacy Policy</string>
    <string name="str_and">And</string>
    <string name="str_terms"><a href="https://www.chatlocaly.com/legal">ToU</a></string>
    <string name="str_terms2">ToU</string>
    <string name="str_toufull">Term Of Use</string>
    <string name="str_verifyNumber">Verify Phone Number</string>
    <string name="str_verification">Verification Password</string>
    <string name="str_adminNumber">Admin Phone Number</string>
    <string name="str_otpverifyLine">A text message was sent to </string>
    <string name="str_resend">RESEND</string>
    <string name="str_yourprofile">Your Profile</string>
    <string name="str_profileTagLine">Please provide your name and an optional profile photo </string>
    <string name="str_businessProfile">Business Profile Setup </string>
    <string name="str_mandatoryalert">Please provide mandatory details marked with</string>
    <string name="str_enterbusinessname">enter your Business name</string>
    <string name="str_businessicon">Business Icon :</string>
    <string name="str_businessName">Business Name :</string>
    <string name="str_homeservice">Home Service :</string>
    <string name="str_kilometers">Kilometers :</string>
    <string name="str_subscriptionplan">Subscription Plan :</string>
    <string name="str_chatlocaly">Welcome To ChatLocaly</string>
    <string name="str_plz_enter_num">Please Enter Your Number</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="str_category">Category</string>
    <string name="str_homeservice_name">Home service</string>
    <string name="str_sort">Sort</string>
    <string name="str_locality">Locality</string>
    <string name="str_commenneeds">Commen Needs</string>
    <string name="str_filter">Filter</string>
    <string name="str_Location">Delhi</string>
    <string name="str_personal">Personal needs</string>
    <string name="str_utilites">Utilites Needs</string>
    <string name="str_skillneeds">Skill needs</string>
    <string name="popularity">Popularity</string>
    <string name="relevance">Relevance</string>
    <string name="str_chooselocality">Choose Locality</string>
    <string name="str_choosebrand">Choose Brand</string>
    <string name="str_sortbty">Sort By</string>
    <string name="str_brand">Brand</string>
    <string name="str_price">Price</string>
    <string name="str_discount">Discount</string>
    <string name="str_product">Product</string>
    <string name="str_business">Business</string>
    <string name="str_service">Service</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_welcome">Welcome To ChatLocaly</string>
    <string name="app_version">Version 1.0.2</string>
    <string name="str_profile">Your Profile</string>
    <string name="str_notification">Notification</string>
    <string name="title_activity_user_profile">Your Profile</string>
    <string name="str_tag_menu">Tag</string>
    <string name="str_unmute_menu">Unmute</string>
    <string name="str_block_menu">Block</string>
    <string name="Str_remove_menu">Remove</string>
    <string name="str_untag">Untag</string>
    <string name="str_unblock">Unblock</string>
    <string name="str_mute">Mute</string>
    <string name="str_add">Add</string>
    <string name="str_description">Description</string>
    <string name="str_report">Would you like to report the listing, please tell us your concern</string>
    <string name="str_Reason">Reason</string>
    <string name="str_reportProduct">Report Product</string>
</resources>