<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_editBusinessInfo"
        android:orderInCategory="100"
        android:title="@string/str_business"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_editOverview"
        android:orderInCategory="100"
        android:title="@string/str_product"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_AddProducts"
        android:orderInCategory="100"
        android:title="@string/str_service"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_AddSevices"
        android:orderInCategory="100"
        android:title="@string/str_product"
        app:showAsAction="never"
        />
</menu>
