<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.chatlocaly.activity.FilterActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/toolbarback">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="left"
                android:text="Filters"
                android:textColor="@color/toolbartitlecolor"
                android:textSize="@dimen/txt_medium" />
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_apply_button"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dimen10">

                <com.chatlocaly.textview.TextViewReguler
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tranparent"
                    android:gravity="left"
                    android:text="@string/str_category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_medium" />

                <com.chatlocaly.textview.TextViewReguler
                    android:id="@+id/tv_commen_needs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tranparent"
                    android:gravity="left"

                    android:text="@string/str_commenneeds"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_extra_small"
                    android:visibility="gone" />

            </LinearLayout>

            <com.chatlocaly.textview.TextViewReguler
                android:id="@+id/tv_locality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tranparent"
                android:gravity="left"
                android:padding="@dimen/dimen10"
                android:text="@string/str_locality"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_medium" />

            <com.chatlocaly.textview.TextViewReguler
                android:id="@+id/tv_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tranparent"
                android:gravity="left"
                android:padding="@dimen/dimen10"
                android:text="@string/str_brand"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_medium" />

            <com.chatlocaly.textview.TextViewReguler
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tranparent"
                android:gravity="left"
                android:padding="@dimen/dimen10"
                android:text="@string/str_price"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_medium" />


            <com.chatlocaly.textview.TextViewReguler
                android:id="@+id/tv_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tranparent"
                android:gravity="left"
                android:padding="@dimen/dimen10"
                android:text="@string/str_discount"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_medium" />

            <com.chatlocaly.textview.TextViewReguler
                android:id="@+id/tv_home_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tranparent"
                android:gravity="left"
                android:padding="@dimen/dimen10"
                android:text="@string/str_homeservice_name"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_medium" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/graylight"></View>

        <FrameLayout
            android:id="@+id/filter_contaner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">


        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/button_back"
            android:text="@string/clear_all"
            android:textColor="@color/text_color_light" />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            android:text="@string/apply"
            android:textColor="@color/white" />


    </LinearLayout>


</RelativeLayout>
